[package]
name = "starknet_api"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/starkware-libs/starknet-api"
license = "Apache-2.0"
license-file = "LICENSE"
description = "Starknet Rust types related to computation and execution."

[features]
testing = []

[dependencies]
cairo-lang-starknet = "2.1.0-rc0"
derive_more = "0.99.17"
hex = "0.4.3"
indexmap = { version = "1.9.2", features = ["serde"] }
once_cell = "1.17.1"
primitive-types = { version = "0.12.1", features = ["serde"] }
serde = { version = "1.0.130", features = ["derive", "rc"] }
serde_json = "1.0.81"
starknet-crypto = { git = "https://github.com/xJonathanLEI/starknet-rs", rev = "64ebc364c0c346e81b715c5b4a3b32ef37b055c8", package = "starknet-crypto" }
thiserror = "1.0.31"

[dev-dependencies]
assert_matches = "1.5.0"
